samples/_failures_safe/1761530202_647640_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c1d3914.c: In function ‘main’:
./samples/SAFE/__tmp_7c1d3914.c:137:16: error: missing terminating " character
  137 |         printf("Error reading matrix input
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7c1d3914.c:137:9: error: expected expression at end of input
  137 |         printf("Error reading matrix input
      |         ^~~~~~
./samples/SAFE/__tmp_7c1d3914.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7c1d3914.c:137:9: error: expected declaration or statement at end of input
